tests/neg/i9168.scala
//> using options -Werror

def g: Int = try 42 finally ; // error
